2018-09-14  Carl Hetherington  <cth@carlh.net>

	* Basic dual-screen mode for player.

2018-09-11  Carl Hetherington  <cth@carlh.net>

	* Full-screen mode for player (#1329).

2018-09-10  Carl Hetherington  <cth@carlh.net>

	* Basic export of multiple reels to multiple files.

2018-09-09  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2018-09-07  Carl Hetherington  <cth@carlh.net>

	* Updated cs_CZ translation from Tomáš Begeni.

2018-09-03  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-08-22  Carl Hetherington  <cth@carlh.net>

	* Disable the whole interface during audio analysis (#1278).

2018-08-20  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU and uk_UA translations from Igor Voytovich.

2018-08-16  Carl Hetherington  <cth@carlh.net>

	* Add pause/resume to the batch converter (#1248).

2018-08-15  Carl Hetherington  <cth@carlh.net>

	* Support download of Barco Alchemy, Christie and GDC certificates
	from their FTP site.

2018-07-20  Carl Hetherington  <cth@carlh.net>

	* Advanced configuration option to allow any container ratio.

	* Support closed-caption creation (#725).

2018-07-19  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2018-07-18  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2018-07-09  Carl Hetherington  <cth@carlh.net>

	* Maintain content sequence after trim (#1327).

	* Keep video content position and trim on frame boundaries
	even if the content's frame rate is forced to a new value (#1335).

2018-07-07  Carl Hetherington  <cth@carlh.net>

	* Add export button for cinemas XML file (#1319).

	* Give better errors when incorrect KDMs are used (#1326).

2018-07-06  Carl Hetherington  <cth@carlh.net>

	* Add option to enable/disable KDM forensic marking.

2018-07-04  Carl Hetherington  <cth@carlh.net>
