@@ -473,6 +473,10 @@ public:
 		return _respect_kdm_validity_periods;
 	}
 
+	boost::optional<boost::filesystem::path> player_log_file () const {
+		return _player_log_file;
+	}
+
 	/* SET (mostly) */
 
 	void set_master_encoding_threads (int n) {
@@ -879,6 +883,18 @@ public:
 		maybe_set (_respect_kdm_validity_periods, r);
 	}
 
+	void set_player_log_file (boost::filesystem::path p) {
+		maybe_set (_player_log_file, p);
+	}
+
+	void unset_player_log_file () {
+		if (!_player_log_file) {
+			return;
+		}
+		_player_log_file = boost::none;
+		changed ();
+	}
+
 	void changed (Property p = OTHER);
 	boost::signals2::signal<void (Property)> Changed;
 	/** Emitted if read() failed on an existing Config file.  There is nothing
@@ -1063,6 +1079,7 @@ private:
 	Interface _interface_complexity;
 	PlayerMode _player_mode;
 	bool _respect_kdm_validity_periods;
+	boost::optional<boost::filesystem::path> _player_log_file;
 
 	static int const _current_version;
 
